<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">fqcommonsdkdemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
  <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button_reg">注册</string>
    <string name="dummy_button_login">登录</string>
    <string name="dummy_button">充值</string>
    <string name="dummy_button_xy">用户协议</string>
    <string name="dummy_button_clean">清空用户</string>
    <string name="txt_hello">hello world</string>
    <string name="txt_default">to do</string>
    <string name="txt_fast_reg">快速注册</string>
    <string name="txt_account">用户名：</string>
    <string name="txt_pwd">密码：</string>
    <string name="hj_emailtip">支付无法完成</string>
    <string name="hj_emailtip2">未绑定邮箱的帐号不能使用支付功能，请绑定</string>
    <string name="hj_emailtip3">去注册</string>
    <!-- <string name="hj_txt_temp">游客</string> -->
    <string name="hj_btn_login_findpwd">密码找回</string>
    <string name="hj_btn_login_login">确认登陆</string>
    <string name="hj_btn_login_loginen">LOGIN</string>
    <string name="hj_btn_login_reg">注册</string>
    <string name="hj_btn_login_regen">REGISTER</string>
    <string name="hj_btn_login_fast">游客登录</string>
    <string name="hj_btn_login_fasten">QUICK LOGIN</string>
    <string name="hj_btn_login_bind">绑定（注册）</string>
    <string name="hj_text_loading">拼命加载中..</string>
    <string name="hj_btn_find_acc">请输入您的账号</string>
    <string name="hj_btn_login_bindphone">手机绑定</string>
    <string name="hj_btn_find_back">返回登录</string>
    <string name="hj_btn_find_next">下一步</string>
    <string name="hj_btn_login_faile">帐号或密码错误</string>
    <string name="hj_btn_find_tip">抱歉，你的帐号未绑定手机，无法找回密码。如有疑问，请添加游戏客服QQ：4008350887</string>
    <string name="hj_btn_find_email">请输入您的账号/手机号</string>
    <string name="hj_btn_bind_pwd">请输入登陆密码</string>
    <string name="hj_btn_find_setpwd">设置密码：6-18个字符</string>
    <string name="hj_btn_find_be">上一步</string>
    <string name="hj_btn_find_ok">确定</string>
    <string name="hj_btn_find_send">发送至手机：</string>
    <string name="hj_btn_bind_phone">请输入您的手机号码</string>
    <string name="hj_btn_bind_newphone">输入新手机号码</string>
    <string name="hj_btn_bind_change">更换手机</string>
    <string name="hj_btn_bind_okchange">确定更换</string>
    <string name="hj_btn_find_phone">手机号/用户名</string>
    <string name="hj_text_paygamename">暴风城之怒</string>
    <string name="hj_text_pay_head">支付中心</string>
    <string name="hj_text_pay_zhifubao">支付宝</string>
    <string name="hj_text_pay_weixin">微信支付</string>
    <string name="hj_text_pay_style">选择支付方式</string>
    <string name="hj_text_pay">确认支付</string>
    <string name="hj_text_pay_money">支付金额:</string>
    <string name="hj_text_pay_tip">提示</string>
    <string name="hj_text_pay_tip2">支付未完成，确认返回游戏？</string>
    <string name="register_name_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ  </string>
    <string name="hj_toast_full">内存不足，请清理内存进行更好的体验游戏</string>
    <string name="hj_toast_loginsuccess">登录成功！</string>
    <string name="hj_toast_loginnotempty">登录信息不能为空</string>
    <string name="hj_toast_loginnotaccount">帐号请输入6~18位数字或字母</string>
    <string name="hj_toast_logintempnotempty">游客帐号不能为空</string>
    <string name="hj_pleasepresspwd">请输入密码</string>
    <string name="hj_toast_loginpleasepressaccount">请输入帐号</string>
    <string name="hj_toast_loginfull">获取用户信息失败,储存空间不足,请清理后再重试</string>
    <string name="hj_edt_reg_account">请输入您的帐号</string>
    <string name="hj_edt_reg_phone">请输入您的手机号码</string>
    <string name="hj_toast_reggetcodesuccess">验证码获取成功！</string>
    <string name="hj_toast_regwait">秒后可重发</string>
    <string name="hj_toast_regpleasewritecode">请输入验证码</string>
    <string name="hj_toast_reggetcode">获取验证码</string>
    <string name="hj_toast_writerightcode">请输入正确的验证码</string>
    <string name="hj_toast_regpleaseac">请输入帐号</string>
    <string name="hj_toast_regpleasepwd">请输入密码</string>
    <string name="hj_toast_regpleaseread">请阅读并同意遵守用户协议</string>
    <string name="hj_toast_regpleasewritephone">请输入手机号！</string>
    <string name="hj_toast_regpleasewriteokphone">请输入正确的手机号!</string>
    <string name="hj_toast_regtempbindnotempty">游客绑定信息不能为空</string>
    <string name="hj_toast_regnotempty">注册信息不能为空</string>
    <string name="hj_toast_changebindsuccess">更换成功！</string>
    <string name="hj_toast_regbindsuccess">绑定成功！</string>
    <string name="hj_toast_regregsuccess">注册成功！</string>
    <string name="hj_toast_paypayfail">支付失败！</string>
    <string name="hj_toast_paypaysuccess">支付成功！</string>
    <string name="hj_toast_paypaywait">支付结果确认中</string>
    <string name="hj_toast_paywxpayloading">微信支付正在加载中</string>
    <string name="hj_toast_paypleaseupwxpay">请安装微信后重试</string>
    <string name="hj_toast_paychecknetwork">网络连接失败，请检查网络</string>
    <string name="hj_toast_findpwdpleasewirteall">请输入完整信息！</string>
    <string name="hj_toast_findpwdsuccess">修改成功！</string>
    <string name="hj_toast_findpwdqq">已复制到粘贴板</string>
    <string name="hj_loginaccounthint">手机号 / 用户名</string>
    <string name="hj_loginpwdhint">请输入登陆密码</string>
    <string name="hj_newreg">快速注册</string>
    <string name="hj_newbtnbindphone">手机绑定</string>
    <string name="hj_newbtnfindpwd">忘记密码</string>
    <string name="hj_pwdprotect">为保障您的帐号安全，请尽快绑定</string>
    <string name="hj_btn_login_tempbind">游客绑定</string>
    <string name="hj_btn_login_tempchange">切换帐号</string>
    <string name="hj_txt_regiread">我已阅读并同意遵守</string>
    <string name="hj_user_agreement">用户协议</string>
    <string name="hj_btn_reggetcode">获取验证码</string>
    <string name="hj_edt_regcode">请输入验证码</string>
    <string name="hj_btn_login_ok">确认注册</string>
    <string name="hj_btn_regtypeapp">帐号注册</string>
    <string name="hj_btn_regtypephone">手机注册</string>
    <string name="hj_btn_bindtypeapp">帐号绑定</string>
    <string name="hj_btn_bindtypephone">手机绑定</string>
    <string name="hj_title_bindemail">邮箱绑定</string>
    <string name="hj_bind_text1">帐号已绑定的手机 : </string>
    <string name="hj_bind_text2">无需再次进行绑定！</string>
    <string name="hj_find1_pleaseact">输入你的帐号</string>
    <string name="hj_find1_geshi">帐号不存在，请重新输入</string>
    <string name="hj_find2_qq">4009003270</string>
    <string name="hj_find3_newpwd">输入新密码</string>
    <string name="hj_find2_text1">抱歉！您的帐号</string>
    <string name="hj_find2_text2">未绑定手机</string>
    <string name="hj_find2_text3">，无法通过手机端找回密码。如有疑问，请联系客服QQ。</string>
    <string name="hj_find2_text4">抱歉！您的帐号未绑定手机，无法通过手机端找回密码。如有疑问，请联系客服</string>
    <string name="hj_find3_text1">手机:</string>
    <string name="hj_payisback_buttonleft">返回游戏</string>
    <string name="hj_payisback_buttonright">继续支付</string>
    <string name="hj_initassetsfile">sdk包内assest文件丢失，请检查</string>
    <string name="hj_wxappid">wx4501fc678d304f1a</string>
    <string name="hj_wxmchid">1377574102</string>
</resources>
